--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Struttura Discord</title>
+    <title>Discord</title>
 
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -12,18 +12,38 @@
 
         <!-- inizio header -->
        <header class="container-flex1">
-            <div class="container1">
-                <div class="container2">
-                    <div>
-                        logo
+            <div class="container">
+                <!-- <div class="container2"> -->
+                    <div style="display: flex;align-items: center;">
+                        <img src="img/logo.svg" alt="logo discord">
                     </div>
-                    <div class="container3">
-                        link link link link link link
+                    <div class="container-link">
+                        <ul>
+                            <li>
+                                <a href="#">Scarica</a>
+                            </li>
+
+                            <li>
+                                <a href="#">Perché Discord</a>
+                            </li>
+
+                            <li>
+                                <a href="#">Nitro</a>
+                            </li>
+
+                            <li>
+                                <a href="#">Sicurezza</a>
+                            </li>
+                            
+                            <li>
+                                <a href="#">Assistenza</a>
+                            </li>
+                        </ul>
                     </div>
-                    <div>
+                    <div style="display: flex;align-items: center;">
                         login
                     </div>
-                </div>
+                <!-- </div> -->
             </div>    
         </header> 
        <!-- fine header -->
@@ -37,11 +57,13 @@
             </section>   
 
             <section class="box-background2">
-                <div class="box2">
+                <div class="container">
+                    <div class="box2">
 
-                </div>
-                <div class="box2-2">
-
+                    </div>
+                    <div class="box2-2">
+    
+                    </div>
                 </div>
             </section>   
 
