--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Discord</title>
 
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.cdnfonts.com/css/whitney-2" rel="stylesheet">
 </head>
     <body>
 
@@ -40,29 +41,37 @@
                             </li>
                         </ul>
                     </div>
-                    <div style="display: flex;align-items: center;">
+                    <div style="display: flex;align-items: center;color: white;">
                         login
                     </div>
                 <!-- </div> -->
-            </div>    
+            </div> 
+            <section class="box-background1">
+                <div class="box1">
+                    <h1>il tuo posto per parlare</h1>
+                    <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
+                    <section class="button-container">
+                        <button id="button1">
+                         <span>&#8595;</span>Scarica per Mac
+                        </button>
+                        <button id="button2">
+                            Apri Discord nel tuo browser
+                        </button>
+                    </section>
+                </div>
+            </section>   
         </header> 
        <!-- fine header -->
 
        <!-- inizio main -->
         <main>
-            <section class="box-background1">
-                <div class="box1">
-
-                </div>
-            </section>   
-
             <section class="box-background2">
                 <div class="container">
                     <div class="box2">
-
+                        <img src="img/item1.svg" alt="item1 discord">
                     </div>
                     <div class="box2-2">
-    
+                        <h1>Un luogo a invito con tutto lo spazio necessario per parlare</h1>
                     </div>
                 </div>
             </section>   
