--- a/index.html
+++ b/index.html
@@ -72,16 +72,18 @@
                     </div>
                     <div class="box2-2">
                         <h1>Un luogo a invito con tutto lo spazio necessario per parlare</h1>
+                        <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
                     </div>
                 </div>
             </section>   
 
             <section class="box-background3">
                 <div class="box3-3">
-
+                    <h1>Dove trovarsi é facile</h1>
+                    <p>mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei lì e unirsi istantaneamente senza dover chiamare.</p>
                 </div>
                 <div class="box3">
-
+                    <img src="img/item2.svg" alt="item2 discord">
                 </div>
             </section>
 
